[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/MinstrelPosterNF.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/BootSplashScript.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/logo_godot.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 120
extra_spacing_top = -50
extra_spacing_bottom = -11
extra_spacing_char = 4
extra_spacing_space = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )
fallback/0 = ExtResource( 2 )

[node name="Node" type="Node"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GodotLabel" type="Label" parent="CanvasLayer"]
anchor_top = 0.55
anchor_right = 1.0
anchor_bottom = 0.753333
margin_left = 1.0
margin_top = 19.0
margin_right = 1.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="EngineLabel" type="Label" parent="CanvasLayer"]
anchor_left = -0.000976563
anchor_top = 0.756667
anchor_right = 0.999023
anchor_bottom = 0.88
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="GodotLogo" type="Sprite" parent="."]
position = Vector2( 506, 184 )
scale = Vector2( 0.0700461, 0.0703125 )
texture = ExtResource( 5 )
normal_map = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
